# MicroscoPy-Xhair

./: .gitignore  .gitmodules  MicroscoPyXhair.spec  MicroscoPyXhair_onedir.spec  MicroscoPyXhair_onefile.spec  README.md  TODO  launch.py  pyproject.toml  requirements.txt  run_pyinstaller.py  setup.py
.github/workflows/: build-action.yml
docs/: index.md
microscopy-xhair/: __init__.py  model_controller.py  view.py
microscopyxhair/: __init__.py  camera_view.py  config_views.py  model_controller.py  utils.py  view.py
src/: launch.py
src/microscopyxhair/: __init__.py  camera_view.py  model_controller.py  utils.py
submodules/: windows_capture_device_list-1.0.1-cp310-cp310-win_amd64.whl  windows_capture_device_list-1.1.0-cp311-cp311-win_amd64.whl
