[tool.poetry]
name = "microscopy-xhair"
version = "0.1.1"
description = "USB microscope viewer, with customisable crosshair"
authors = ["Michael Wharmby <mt@wharmby.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "microscopy_xhair"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.25.1"
opencv-python = "^4.8.0.74"
wxPython = ">=4.2.0"
windows-capture-device-list = { url = "https://github.com/mtwharmby/MicroscoPy-Xhair/raw/main/submodules/windows_capture_device_list-1.1.0-cp311-cp311-win_amd64.whl" }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
