[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microscopyxhair"
authors = [
  { name="Michael Wharmby", email="mtwharmby@gmail.com" },
]
description = "Simple user interface for getting images from USB microscope with added crosshair."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.6",
    "wxPython>=4.2",
    "windows-capture-device-list @ https://github.com/mtwharmby/MicroscoPy-Xhair/raw/main/submodules/windows_capture_device_list-1.1.0-cp311-cp311-win_amd64.whl"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "src.microscopyxhair.__init__.VERSION"}

[tool.setuptools.packages.find]
exclude = ["launch.py"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.13.0",
]

[project.urls]
"Homepage" = "https://github.com/mtwharmby/MicroscoPy-Xhair"
"Bug Tracker" = "https://github.com/mtwharmby/MicroscoPy-Xhair/issues"